--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<project name="bugsim" default="build-osx-app">
+<project name="generic.build" default="build-osx-app">
+    <property name="base.dir" value="${basedir}" />
 
-    <property name="src.dir" value="${basedir}/src"/>
-    <property name="lib.dir" value="${basedir}/lib"/>
-    <property name="target.dir" value="${basedir}/target"/>
+    <property name="src.dir" value="${base.dir}/src"/>
+    <property name="lib.dir" value="${base.dir}/lib"/>
+    <property name="target.dir" value="${base.dir}/target"/>
 
-    <property name="dependency.file" value="${basedir}/dependencies.xml"/>
+    <property name="dependency.file" value="${base.dir}/dependencies.xml"/>
 
     <property name="src.build.dir" value="${src.dir}/build"/>
     <property name="src.build.macros.dir" value="${src.build.dir}/macros"/>
@@ -22,6 +23,7 @@
     <property name="src.test.java.functional.dir" value="${src.test.java.dir}/functional"/>
 
     <property name="src.resource.dir" value="${src.dir}/main/resource"/>
+    <property file="${src.resource.dir}/application/application.properties" />
 
     <property name="lib.build.dir" value="${lib.dir}/build"/>
     <property name="lib.main.dir" value="${lib.dir}/main"/>
@@ -88,10 +90,10 @@
 
 
     <target name="report.config" description="--> lists some important configuration information">
-        <echo message="ant.home        : ${ant.home}"/>
-        <echo message="os.name         : ${os.name}"/>
-        <echo message="basedir         : ${basedir}"/>
-        <echo message="skip.update.lib : ${skip.update.lib}"/>
+        <echo message="application.name    : ${application.name}"/>        
+        <echo message="ant.home            : ${ant.home}"/>
+        <echo message="os.name             : ${os.name}"/>
+        <echo message="basedir             : ${basedir}"/>        
     </target>
 
     <target name="clean" description="--> remove all files created with this build script">
