--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project name="bugsim">
-    <import file="${basedir}/src/build/main.xml" />
 
+    <import file="${basedir}/src/build/main.xml" />
     
 </project>
