--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="bugsim">
+   <property name="base.dir" value="${basedir}" />
 
-    <import file="${basedir}/src/build/main.xml" />
-    
+   <import file="${basedir}/src/build/main.xml" />
+
 </project>
