--- a/trunk/src/main/resource/application/application.properties
+++ b/trunk/src/main/resource/application/application.properties
@@ -3,3 +3,5 @@ application.name=bugsim
 application.lastdistributed=14.40 10-08-2006
 application.version=8.0
 application.distnumber=0008
+application.vendor=ixcode.org
+application.mainclass=com.ixcode.bugsim.BugsimMain
