--- a/trunk/src/main/resource/application/application.properties
+++ b/trunk/src/main/resource/application/application.properties
@@ -1,7 +1,8 @@
 #Thu Sep 06 14:17:13 BST 2007
 application.name=bugsim
 application.lastdistributed=14.40 10-08-2006
-application.version=8.0
-application.distnumber=0008
+application.version=1.0
+application.distnumber=0001
+application.revision=xxxx
 application.vendor=ixcode.org
 application.mainclass=com.ixcode.bugsim.BugsimMain
